crates/stackable-versioned-macros/tests/default/deprecate.stderr
error: deprecation must be done using #[versioned(deprecated(since = "VERSION"))]
  --> tests/default/deprecate.rs:10:9
   |
10 |         #[deprecated]
   |         ^
